--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -44,8 +44,9 @@
 <h2><span id=".D0.9E.D0.B1.D1.89.D0.B8_.D0.BD.D0.B0.D1.81.D1.82.D1.80.D0.BE.D0.B9.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;&#1080;_&#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;">&#1054;&#1073;&#1097;&#1080; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;</span></h2>
 <p>&#1058;&#1072;&#1079;&#1080; &#1075;&#1088;&#1091;&#1087;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103; &#1080;&#1084;&#1072; &#1089;&#1077;&#1076;&#1077;&#1084; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1080;: &#1054;&#1073;&#1097;&#1080;, &#1044;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;, &#1048;&#1079;&#1073;&#1086;&#1088;, &#1050;&#1077;&#1096;, &#1054;&#1073;&#1083;&#1072;&#1089;&#1090; &#1079;&#1072; &#1080;&#1079;&#1074;&#1077;&#1089;&#1090;&#1080;&#1103;, &#1048;&#1079;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1086;&#1090;&#1095;&#1077;&#1090; &#1080; &#1055;&#1086;&#1084;&#1086;&#1097;.
 </p><p>&#1042;&#1098;&#1074; <span style="font-size:small;color:blue;">0.21 and below</span> &#1089;&#1077;&#1076;&#1084;&#1072;&#1090;&#1072; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;, Help, &#1077; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1072; &#1089;&#1072;&#1084;&#1086; &#1072;&#1082;&#1086; <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-Help">Help Addon</a> &#1077; <a href="../Std_AddonMgr.html" title="Std AddonMgr">installed</a>.
+</p><p><span id="General"></span>
 </p>
-<h3><span class="mw-headline" id="General">General</span></h3>
+<h2><span id=".D0.9E.D0.B1.D1.89.D0.B8"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;&#1080;">&#1054;&#1073;&#1097;&#1080;</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_General_Page_General.png&amp;filetimestamp=20240720115445&amp;.html" class="mw-file-description"><img src="../File/Preferences_General_Page_General.png" decoding="async" width="400" height="397" class="mw-file-element" data-file-width="600" data-file-height="595"></a></span>
 </p><p>On this page you can specify the following:
 </p>
@@ -967,7 +968,7 @@
 </td>
 <td>Controls which keyboard modifiers are used for the shortcuts, example <b>Ctrl+Shift+</b> creates shortcuts in the form of <b>Ctrl+Shift+1</b>, <b>Ctrl+Shift+2</b>, etc.
 </td></tr></tbody></table>
-<h3><span class="mw-headline" id="General_2">General</span></h3>
+<h3><span class="mw-headline" id="General">General</span></h3>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Python_Page_General.png&amp;filetimestamp=20240422195759&amp;.html" class="mw-file-description"><img src="../File/Preferences_Python_Page_General.png" decoding="async" width="400" height="171" class="mw-file-element" data-file-width="600" data-file-height="257"></a></span>
 </p><p>These preferences control the behavior of the <a href="../Python_Console.html" title="Python Console">Python Console</a>. This console can be opened using the <b>View &rarr; Panels &rarr; Python Console</b> menu option.
 </p><p>Note that the color and font settings for the console are defined on the <a href="#Editor">Editor</a> page.
@@ -1241,13 +1242,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126134809
+Cached time: 20260126134823
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.223 seconds
-Real time usage: 0.483 seconds
-Preprocessor visited node count: 2477/1000000
+CPU time usage: 0.203 seconds
+Real time usage: 0.248 seconds
+Preprocessor visited node count: 2478/1000000
 Post&#8208;expand include size: 24829/2097152 bytes
 Template argument size: 8113/2097152 bytes
 Highest expansion depth: 7/100
@@ -1257,19 +1258,19 @@ Unstrip post&#8208;expand size: 4109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   92.464      1 -total
- 15.91%   14.714      1 Template:Userdocnavi/bg
- 15.85%   14.656     11 Template:Value
- 11.15%   10.311      3 Template:PropertyView
-  9.38%    8.669    228 Template:MenuCommand
-  5.63%    5.206     15 Template:FileName
-  5.36%    4.957      3 Template:Variable
-  4.84%    4.471     11 Template:Incode
-  4.39%    4.057     42 Template:Version
-  4.14%    3.826      2 Template:Docnav
+100.00%   50.260      1 -total
+ 14.59%    7.332    228 Template:MenuCommand
+ 12.89%    6.477      1 Template:Userdocnavi/bg
+  8.43%    4.236      3 Template:PropertyView
+  8.41%    4.226     11 Template:Value
+  5.46%    2.745     42 Template:Version
+  4.77%    2.398      1 Template:Navigation_menu_2
+  4.36%    2.192      2 Template:Docnav
+  3.93%    1.973      3 Template:Variable
+  3.78%    1.899     15 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134808 and revision id 1744338. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134823 and revision id 1744340. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
