--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -13,7 +13,7 @@
 <li><a href="../ro/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (5% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (7% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor p&#345;edvoleb (7% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1077;&#1082; (78% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (1% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="&#35774;&#32622;&#29992;&#25143;&#39318;&#36873;&#39033; (5% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -48,7 +48,7 @@
 </p>
 <h2><span id=".D0.9E.D0.B1.D1.89.D0.B8"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;&#1080;">&#1054;&#1073;&#1097;&#1080;</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_General_Page_General.png&amp;filetimestamp=20240720115445&amp;.html" class="mw-file-description"><img src="../File/Preferences_General_Page_General.png" decoding="async" width="400" height="397" class="mw-file-element" data-file-width="600" data-file-height="595"></a></span>
-</p><p>On this page you can specify the following:
+</p><p>&#1053;&#1072; &#1090;&#1072;&#1079;&#1080; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; &#1084;&#1086;&#1078;&#1077;&#1090;&#1077; &#1076;&#1072; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1080;&#1090;&#1077; &#1089;&#1083;&#1077;&#1076;&#1085;&#1086;&#1090;&#1086;:
 </p>
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
@@ -1242,12 +1242,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126134823
+Cached time: 20260126134900
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.203 seconds
-Real time usage: 0.248 seconds
+CPU time usage: 0.227 seconds
+Real time usage: 0.300 seconds
 Preprocessor visited node count: 2478/1000000
 Post&#8208;expand include size: 24829/2097152 bytes
 Template argument size: 8113/2097152 bytes
@@ -1258,19 +1258,19 @@ Unstrip post&#8208;expand size: 4109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.260      1 -total
- 14.59%    7.332    228 Template:MenuCommand
- 12.89%    6.477      1 Template:Userdocnavi/bg
-  8.43%    4.236      3 Template:PropertyView
-  8.41%    4.226     11 Template:Value
-  5.46%    2.745     42 Template:Version
-  4.77%    2.398      1 Template:Navigation_menu_2
-  4.36%    2.192      2 Template:Docnav
-  3.93%    1.973      3 Template:Variable
-  3.78%    1.899     15 Template:FileName
+100.00%   51.848      1 -total
+ 13.95%    7.232    228 Template:MenuCommand
+ 12.19%    6.319      1 Template:Userdocnavi/bg
+ 10.24%    5.308      3 Template:PropertyView
+  6.86%    3.555     11 Template:Value
+  6.12%    3.175     15 Template:FileName
+  5.38%    2.790      3 Template:Variable
+  4.72%    2.447     42 Template:Version
+  4.56%    2.362      2 Template:Docnav
+  4.53%    2.347      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134823 and revision id 1744340. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134900 and revision id 1744342. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
