--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -2,7 +2,7 @@
 <li><a href="../de/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD Handbuch-Konverter (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FreeCAD_Manual_Converter.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FreeCAD Manual Converter (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD Manual Converter (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="Konwerter Podr&#281;cznika FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -95,12 +95,10 @@ FreeCAD Manual Converter
 <li>Maintain proper formatting and image quality</li>
 <li>Have a complete reference even without internet access</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Dependencies">Dependencies</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<p><span id="Dependencies"></span>
+</p>
+<h2><span class="mw-headline" id="Dipendenze">Dipendenze</span></h2>
 <h3><span class="mw-headline" id="Windows">Windows</span></h3>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Install Python 3.x.</li>
 <li>Install GTK3 runtime</li>
@@ -108,9 +106,7 @@ FreeCAD Manual Converter
 </div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">pip</span> <span class="n">install</span> <span class="n">requests</span> <span class="n">weasyprint</span> <span class="n">beautifulsoup4</span> <span class="n">PyPDF2</span> <span class="n">Pillow</span> <span class="n">cairosvg</span> <span class="n">ebooklib</span>
 </pre></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span id="Linux_.28Ubuntu.2FDebian.29"></span><span class="mw-headline" id="Linux_(Ubuntu/Debian)">Linux (Ubuntu/Debian)</span></h3>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Install all necessary dependencies as:
 </p>
@@ -649,13 +645,13 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126134654
+Cached time: 20260126135159
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.148 seconds
-Preprocessor visited node count: 156/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.102 seconds
+Preprocessor visited node count: 154/1000000
 Post&#8208;expand include size: 2446/2097152 bytes
 Template argument size: 631/2097152 bytes
 Highest expansion depth: 7/100
@@ -665,13 +661,13 @@ Unstrip post&#8208;expand size: 21462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.366      1 -total
- 40.52%   17.977      1 Template:Macro
- 40.52%   17.976      1 Template:MacroCode
- 17.82%    7.905      3 Template:Code
+100.00%   27.385      1 -total
+ 55.11%   15.093      1 Template:MacroCode
+ 32.01%    8.766      1 Template:Macro
+ 11.68%    3.199      3 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126134654 and revision id 1744332. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135159 and revision id 1744350. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
