--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -119,9 +119,9 @@ FreeCAD Manual Converter
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">pip3</span> <span class="n">install</span> <span class="n">requests</span> <span class="n">weasyprint</span> <span class="n">beautifulsoup4</span> <span class="n">PyPDF2</span> <span class="n">Pillow</span> <span class="n">cairosvg</span> <span class="n">ebooklib</span>
 </pre></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>To use the script just download it and run it. The script will create two files in your current directory:
 </p>
@@ -643,12 +643,12 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135204
+Cached time: 20260126135206
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.081 seconds
+CPU time usage: 0.034 seconds
+Real time usage: 0.050 seconds
 Preprocessor visited node count: 153/1000000
 Post&#8208;expand include size: 2446/2097152 bytes
 Template argument size: 631/2097152 bytes
@@ -659,13 +659,13 @@ Unstrip post&#8208;expand size: 21462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.961      1 -total
- 39.98%    3.583      1 Template:Macro
- 33.76%    3.025      3 Template:Code
- 21.42%    1.919      1 Template:MacroCode
+100.00%   12.589      1 -total
+ 44.37%    5.586      1 Template:Macro
+ 28.45%    3.581      3 Template:Code
+ 23.05%    2.902      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135204 and revision id 1744352. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135206 and revision id 1744354. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
