--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -77,10 +77,8 @@ FreeCAD Manual Converter
 <p><span id="Introduction"></span>
 </p>
 <h2><span class="mw-headline" id="Introduzione">Introduzione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The FreeCAD Manual Converter is a Python script that automatically generates PDF and EPUB versions of the FreeCAD manual from the FreeCAD Wiki. It creates a complete, properly formatted offline manual that includes all chapters, images, and formatting from the online manual.
+<p>FreeCAD Manual Converter &egrave; uno script Python che genera automaticamente le versioni PDF ed EPUB del manuale di FreeCAD dal Wiki di FreeCAD. Crea un manuale offline completo e correttamente formattato, che include tutti i capitoli, le immagini e la formattazione del manuale online.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Background">Background</span></h3>
 </div>
@@ -641,13 +639,13 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135211
+Cached time: 20260126135234
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.037 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 152/1000000
+Real time usage: 0.061 seconds
+Preprocessor visited node count: 151/1000000
 Post&#8208;expand include size: 2446/2097152 bytes
 Template argument size: 631/2097152 bytes
 Highest expansion depth: 7/100
@@ -657,13 +655,13 @@ Unstrip post&#8208;expand size: 21462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.318      1 -total
- 38.73%    5.158      1 Template:Macro
- 38.67%    5.150      1 Template:MacroCode
- 19.94%    2.655      3 Template:Code
+100.00%   10.551      1 -total
+ 58.11%    6.131      1 Template:Macro
+ 24.64%    2.600      3 Template:Code
+ 13.91%    1.468      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135211 and revision id 1744356. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135234 and revision id 1744358. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
