--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -2,7 +2,7 @@
 <li><a href="../de/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD Handbuch-Konverter (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FreeCAD_Manual_Converter.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FreeCAD Manual Converter (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD Manual Converter (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="Konwerter Podr&#281;cznika FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -116,10 +116,8 @@ FreeCAD Manual Converter
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>To use the script just download it and run it. The script will create two files in your current directory:
+<p>Per utilizzare lo script, basta scaricarlo ed eseguirlo. Lo script creer&agrave; due file nella directory corrente:
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><b>FreeCAD_User_Manual.pdf</b>: Complete PDF version of the manual</li>
 <li><b>FreeCAD_User_Manual.epub</b>: EPUB version suitable for e-readers</li></ul>
@@ -635,29 +633,29 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135317
+Cached time: 20260126135334
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.049 seconds
-Preprocessor visited node count: 149/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.079 seconds
+Preprocessor visited node count: 148/1000000
 Post&#8208;expand include size: 2446/2097152 bytes
 Template argument size: 631/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21462/5000000 bytes
+Unstrip post&#8208;expand size: 21463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.141      1 -total
- 43.17%    4.378      1 Template:Macro
- 27.06%    2.744      1 Template:MacroCode
- 26.34%    2.671      3 Template:Code
+100.00%   16.510      1 -total
+ 46.56%    7.687      1 Template:Macro
+ 27.09%    4.472      1 Template:MacroCode
+ 23.00%    3.797      3 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135317 and revision id 1744362. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135334 and revision id 1744364. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
