--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -118,10 +118,8 @@ FreeCAD Manual Converter
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <p>Per utilizzare lo script, basta scaricarlo ed eseguirlo. Lo script creer&agrave; due file nella directory corrente:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><b>FreeCAD_User_Manual.pdf</b>: Complete PDF version of the manual</li>
-<li><b>FreeCAD_User_Manual.epub</b>: EPUB version suitable for e-readers</li></ul>
-</div>
+<ul><li><b>FreeCAD_User_Manual.pdf</b>: Versione PDF completa del manuale</li>
+<li><b>FreeCAD_User_Manual.epub</b>: Versione EPUB adatta per e-reader</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <pre>import requests
 from weasyprint import HTML
@@ -633,13 +631,13 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135334
+Cached time: 20260126135354
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.079 seconds
-Preprocessor visited node count: 148/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.057 seconds
+Preprocessor visited node count: 147/1000000
 Post&#8208;expand include size: 2446/2097152 bytes
 Template argument size: 631/2097152 bytes
 Highest expansion depth: 7/100
@@ -649,13 +647,13 @@ Unstrip post&#8208;expand size: 21463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.510      1 -total
- 46.56%    7.687      1 Template:Macro
- 27.09%    4.472      1 Template:MacroCode
- 23.00%    3.797      3 Template:Code
+100.00%   10.626      1 -total
+ 51.73%    5.497      1 Template:Macro
+ 24.86%    2.642      3 Template:Code
+ 19.70%    2.093      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135334 and revision id 1744364. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135354 and revision id 1744366. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
