--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -101,10 +101,8 @@ FreeCAD Manual Converter
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">pip</span> <span class="n">install</span> <span class="n">requests</span> <span class="n">weasyprint</span> <span class="n">beautifulsoup4</span> <span class="n">PyPDF2</span> <span class="n">Pillow</span> <span class="n">cairosvg</span> <span class="n">ebooklib</span>
 </pre></div>
 <h3><span id="Linux_.28Ubuntu.2FDebian.29"></span><span class="mw-headline" id="Linux_(Ubuntu/Debian)">Linux (Ubuntu/Debian)</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Install all necessary dependencies as:
+<p>Installare tutte le dipendenze necessarie come:
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">sudo</span> <span class="n">apt</span><span class="o">-</span><span class="n">get</span> <span class="n">update</span>
 <span class="n">sudo</span> <span class="n">apt</span><span class="o">-</span><span class="n">get</span> <span class="n">install</span> <span class="o">-</span><span class="n">y</span> <span class="n">python3</span><span class="o">-</span><span class="n">pip</span> <span class="n">python3</span><span class="o">-</span><span class="n">dev</span> <span class="n">python3</span><span class="o">-</span><span class="n">cairo</span> <span class="n">python3</span><span class="o">-</span><span class="n">gi</span><span class="o">-</span><span class="n">cairo</span>
 <span class="n">sudo</span> <span class="n">apt</span><span class="o">-</span><span class="n">get</span> <span class="n">install</span> <span class="o">-</span><span class="n">y</span> <span class="n">libcairo2</span><span class="o">-</span><span class="n">dev</span> <span class="n">libpango1</span><span class="mf">.0</span><span class="o">-</span><span class="n">dev</span> <span class="n">libgdk</span><span class="o">-</span><span class="n">pixbuf2</span><span class="mf">.0</span><span class="o">-</span><span class="n">dev</span> <span class="n">libffi</span><span class="o">-</span><span class="n">dev</span> <span class="n">shared</span><span class="o">-</span><span class="n">mime</span><span class="o">-</span><span class="n">info</span>
@@ -631,13 +629,13 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135354
+Cached time: 20260126135407
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.057 seconds
-Preprocessor visited node count: 147/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.085 seconds
+Preprocessor visited node count: 146/1000000
 Post&#8208;expand include size: 2446/2097152 bytes
 Template argument size: 631/2097152 bytes
 Highest expansion depth: 7/100
@@ -647,13 +645,13 @@ Unstrip post&#8208;expand size: 21463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.626      1 -total
- 51.73%    5.497      1 Template:Macro
- 24.86%    2.642      3 Template:Code
- 19.70%    2.093      1 Template:MacroCode
+100.00%   15.945      1 -total
+ 36.37%    5.800      3 Template:Code
+ 31.11%    4.961      1 Template:Macro
+ 30.20%    4.816      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135354 and revision id 1744366. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135407 and revision id 1744368. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
