--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -4,22 +4,21 @@
 <li><a href="../fr/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD Manual Converter (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/FreeCAD_Manual_Converter.html" class="mw-pt-progress mw-pt-progress--complete" title="Konwerter Podr&#281;cznika FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span typeof="mw:File"><a href="../index.php?title=Text-x-python.png&amp;filetimestamp=20121224162851&amp;.html" class="mw-file-description" title="Generic macro icon. Create your personal icon with the same name of the macro"><img alt="Generic macro icon. Create your personal icon with the same name of the macro" src="../File/Text-x-python.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span> </span>
+<p><span typeof="mw:File"><a href="../index.php?title=Text-x-python.png&amp;filetimestamp=20121224162851&amp;.html" class="mw-file-description" title="Icona macro generica. Crea la tua icona personale con lo stesso nome della macro"><img alt="Icona macro generica. Crea la tua icona personale con lo stesso nome della macro" src="../File/Text-x-python.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span> </span>
 FreeCAD Manual Converter
 </p>
 </td></tr>
 <tr>
-<th class="ctOdd">Description
+<th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Python script that automatically generates PDF and EPUB versions of the FreeCAD manual.<br><br>Macro version: 0.1<br>Last modified: 2024-12-16<br>FreeCAD version: All<br>Author: Adrianos<br>
+<td class="ctEven left macro-description">Script Python che genera automaticamente le versioni PDF ed EPUB del manuale di FreeCAD.<br><br>Versione macro: 0.1<br>Ultima modifica: 2024-12-16<br>Versione FreeCAD: All<br>Autore: Adrianos<br>
 </td></tr>
 <tr>
-<th class="ctOdd">Author
+<th class="ctOdd">Autore
 </th></tr>
 <tr>
 <td class="ctEven macro-author"><a href="../index.php?title=User;Adrianos&amp;action=edit&amp;redlink=1.html" class="new" title="User:Adrianos (page does not exist)">Adrianos</a>
@@ -31,40 +30,40 @@ FreeCAD Manual Converter
 <td class="ctEven macro-download"><i>None</i>
 </td></tr>
 <tr>
-<th class="ctOdd">Links
+<th class="ctOdd">Link
 </th></tr>
 <tr>
-<td class="ctEven macro-Links"><a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a><br><a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a><br><a href="../Customize_Toolbars.html" title="Customize Toolbars">How to customize toolbars</a>
+<td class="ctEven macro-Links"><a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a><br><a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a><br><a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la  toolbar</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Macro Version
+<th class="ctOdd">Versione macro
 </th></tr>
 <tr>
 <td class="ctEven macro-version">0.1
 </td></tr>
 <tr>
-<th class="ctOdd">Date last modified
+<th class="ctOdd">Data ultima modifica
 </th></tr>
 <tr>
 <td class="ctEven macro-date">2024-12-16
 </td></tr>
 <tr>
-<th class="ctOdd">FreeCAD Version(s)
+<th class="ctOdd">Versioni di FreeCAD
 </th></tr>
 <tr>
 <td class="ctEven FreeCAD-version">All
 </td></tr>
 <tr>
-<th class="ctOdd">Default shortcut
+<th class="ctOdd">Scorciatoia
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuna</i>
 </td></tr>
 <tr>
-<th class="ctOdd">See also
+<th class="ctOdd">Vedere anche
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuno</i>
 </td></tr>
 <tr>
 <th class="ctOdd">
@@ -73,7 +72,6 @@ FreeCAD Manual Converter
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Introduction"></span>
 </p>
 <h2><span class="mw-headline" id="Introduzione">Introduzione</span></h2>
@@ -629,15 +627,15 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135407
+Cached time: 20260126135430
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.085 seconds
-Preprocessor visited node count: 146/1000000
-Post&#8208;expand include size: 2446/2097152 bytes
-Template argument size: 631/2097152 bytes
+CPU time usage: 0.038 seconds
+Real time usage: 0.100 seconds
+Preprocessor visited node count: 143/1000000
+Post&#8208;expand include size: 2488/2097152 bytes
+Template argument size: 632/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
@@ -645,13 +643,13 @@ Unstrip post&#8208;expand size: 21463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.945      1 -total
- 36.37%    5.800      3 Template:Code
- 31.11%    4.961      1 Template:Macro
- 30.20%    4.816      1 Template:MacroCode
+100.00%   18.763      1 -total
+ 36.23%    6.798      1 Template:Macro/it
+ 33.22%    6.233      1 Template:MacroCode
+ 27.81%    5.218      3 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135407 and revision id 1744368. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135430 and revision id 1744370. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
