--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -91,11 +91,9 @@ FreeCAD Manual Converter
 </p>
 <h2><span class="mw-headline" id="Dipendenze">Dipendenze</span></h2>
 <h3><span class="mw-headline" id="Windows">Windows</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Install Python 3.x.</li>
-<li>Install GTK3 runtime</li>
-<li>Open Command Prompt and install Python packages:</li></ol>
-</div>
+<ol><li>Installare Python 3.x.</li>
+<li>Installare il runtime GTK3</li>
+<li>Aprire il prompt dei comandi e installare i pacchetti Python:</li></ol>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">pip</span> <span class="n">install</span> <span class="n">requests</span> <span class="n">weasyprint</span> <span class="n">beautifulsoup4</span> <span class="n">PyPDF2</span> <span class="n">Pillow</span> <span class="n">cairosvg</span> <span class="n">ebooklib</span>
 </pre></div>
 <h3><span id="Linux_.28Ubuntu.2FDebian.29"></span><span class="mw-headline" id="Linux_(Ubuntu/Debian)">Linux (Ubuntu/Debian)</span></h3>
@@ -627,13 +625,13 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135430
+Cached time: 20260126135451
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 143/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.059 seconds
+Preprocessor visited node count: 142/1000000
 Post&#8208;expand include size: 2488/2097152 bytes
 Template argument size: 632/2097152 bytes
 Highest expansion depth: 7/100
@@ -643,13 +641,13 @@ Unstrip post&#8208;expand size: 21463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.763      1 -total
- 36.23%    6.798      1 Template:Macro/it
- 33.22%    6.233      1 Template:MacroCode
- 27.81%    5.218      3 Template:Code
+100.00%   14.636      1 -total
+ 45.18%    6.613      1 Template:Macro/it
+ 30.32%    4.438      3 Template:Code
+ 21.73%    3.181      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135430 and revision id 1744370. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135451 and revision id 1744372. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
